Work on analysis